# ihate_exercises

./: .gitignore  pyproject.toml  utils.py
ihat_exercises/: exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py
ihat_exercises_answers/: exercise_1.py  exercise_3.py  exercise_4.py  exercise_5.py
tests/: test_exercise_1.py  test_exercise_2.py  test_exercise_3.py  test_exercise_4.py  test_exercise_5.py  test_ihat_exercises.py
