[tool.poetry]
name = "ihat_exercises"
version = "0.1.0"
description = ""
authors = ["abu-falcon <nopufa89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
mypy = "^0.931"
isort = "^5.10.1"

[tool.mypy]
ignore_missing_imports = true 
follow_imports = "silent"
strict = true
exclude = "tests/**/*.py"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
